--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
               <ul class="sp_navi_li">
                 <li><a href="index.html">TOPページ</a></li>
-                <li><a href="./news/news.html">ニュースリリース</a></li>
-                <li><a href="./company/company.html">会社概要</a></li>
+                <li><a href="news.html">ニュースリリース</a></li>
+                <li><a href="company.html">会社概要</a></li>
               </ul>
             </div>
             <!-- sp_navi -->
@@ -43,8 +43,8 @@
 
               <ul class="pc_navi_li">
                 <li class="navi_toppage"><a href="index.html">TOPページ</a></li>
-                <li class="navi_news"><a href="./news/news.html">ニュースリリース</a></li>
-                <li class="navi_company"><a href="./company/company.html">会社概要</a></li>
+                <li class="navi_news"><a href="news.html">ニュースリリース</a></li>
+                <li class="navi_company"><a href="company.html">会社概要</a></li>
               </ul>
 
             </div>
@@ -64,7 +64,7 @@
         <div class="row">
           <div class="twelve columns">
 
-            <img class="u-max-full-width" src="./images/top/cover_read.png" alt="新時代のソリューションを提供する" srcset="./images/top/cover_read@2x.png 2x" />
+            <img class="u-max-full-width" src="images/top/cover_read.png" alt="新時代のソリューションを提供する" srcset="images/top/cover_read@2x.png 2x" />
 
           </div>
         </div>
@@ -82,7 +82,7 @@
 
           <div class="four columns">
 
-            <img class="u-max-full-width" src="./images/top/service_01.jpg" alt="スマホアプリ開発サービス" srcset="./images/top/service_01@2x.jpg 2x" />
+            <img class="u-max-full-width" src="images/top/service_01.jpg" alt="スマホアプリ開発サービス" srcset="images/top/service_01@2x.jpg 2x" />
 
             <h3 class="service_title">スマホアプリ開発サービス</h3>
             <p>弊社では、お客様のさらなる販路拡大、認知度向上のためのスマホアプリ開発を行っております。独自に開発したシステム「brain gate」を利用し、素早くお客様のご要望にお応えします。</p>
@@ -205,8 +205,8 @@ google.maps.event.addDomListener(window, 'load', function() {
           <div class="four columns">
             <ul class="foot_navi">
               <li><a href="index.html">TOPページ</a></li>
-              <li><a href="./news/news.html">ニュースリリース</a></li>
-              <li><a href="./company/company.html">会社概要</a></li>
+              <li><a href="news.html">ニュースリリース</a></li>
+              <li><a href="company.html">会社概要</a></li>
             </ul>
           </div>
           <!-- columns -->
