--- a/news.html
+++ b/news.html
@@ -9,11 +9,11 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="../css/normalize.css">
-  <link rel="stylesheet" href="../css/skeleton.css">
-  <link rel="stylesheet" href="../css/sample.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/sample.css">
 
-  <link rel="icon" type="../image/png" href="../images/favicon.png">
+  <link rel="icon" type="image/png" href="images/favicon.png">
 
 </head>
 <body>
@@ -32,18 +32,18 @@
     <div class="row">
       <div class="six columns logo">
 
-        <h1><a href="../index.html"><img class="u-max-full-width" src="../images/top/logo.png" alt="株式会社サンプル" srcset="../images/top/logo@2x.png 2x" /></a></h1>
+        <h1><a href="index.html"><img class="u-max-full-width" src="images/top/logo.png" alt="株式会社サンプル" srcset="images/top/logo@2x.png 2x" /></a></h1>
 
       </div>
       <div class="six columns navi">
 
         <div class="sp_navi">
-          <img id="sp_navi_btn" class="u-max-full-width" src="../images/top/sp_navi.png" alt="sp_navi" srcset="images/top/sp_navi@2x.png 2x" />
+          <img id="sp_navi_btn" class="u-max-full-width" src="images/top/sp_navi.png" alt="sp_navi" srcset="images/top/sp_navi@2x.png 2x" />
 
           <ul class="sp_navi_li">
-            <li><a href="../index.html">TOPページ</a></li>
+            <li><a href="index.html">TOPページ</a></li>
             <li><a href="news.html">ニュースリリース</a></li>
-            <li><a href="../company/company.html">会社概要</a></li>
+            <li><a href="company/company.html">会社概要</a></li>
           </ul>
         </div>
         <!-- sp_navi -->
@@ -51,9 +51,9 @@
         <div class="pc_navi">
 
           <ul class="pc_navi_li">
-            <li class="navi_toppage"><a href="../index.html">TOPページ</a></li>
+            <li class="navi_toppage"><a href="index.html">TOPページ</a></li>
             <li class="navi_news"><a href="news.html">ニュースリリース</a></li>
-            <li class="navi_company"><a href="../company/company.html">会社概要</a></li>
+            <li class="navi_company"><a href="company.html">会社概要</a></li>
           </ul>
 
         </div>
@@ -106,9 +106,9 @@
           <h3>Contents</h3>
 
           <ul>
-            <li><a href="../index.html">TOPページ</a></li>
+            <li><a href="index.html">TOPページ</a></li>
             <li><a href="news.html">ニュースリリース</a></li>
-            <li><a href="../company/company.html">会社概要</a></li>
+            <li><a href="company/company.html">会社概要</a></li>
           </ul>
         </div>
 
@@ -126,7 +126,7 @@
   <div class="container">
     <div class="row">
       <div class="four columns sp">
-        <img class="u-max-full-width" src="../images/top/footer_logo.png" alt="株式会社サンプル" srcset="../images/top/footer_logo@2x.png 2x" />
+        <img class="u-max-full-width" src="images/top/footer_logo.png" alt="株式会社サンプル" srcset="images/top/footer_logo@2x.png 2x" />
       </div>
       <!-- columns -->
       <div class="four columns foot_address sp">
@@ -138,9 +138,9 @@
       <!-- columns -->
       <div class="four columns">
         <ul class="foot_navi">
-          <li><a href="../index.html">TOPページ</a></li>
+          <li><a href="index.html">TOPページ</a></li>
           <li><a href="news.html">ニュースリリース</a></li>
-          <li><a href="../company/company.html">会社概要</a></li>
+          <li><a href="company/company.html">会社概要</a></li>
         </ul>
       </div>
       <!-- columns -->
