--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@
 
           <div class="twelve columns">
 
-            <h2 class="news_title">NEWS</div>
+            <h2 class="news_title">NEWS</h2>
+            </div>
 
             <ul class="news_lists">
               <li><span>0000-00-00</span> ここにニューステキストが入ります。ここにニューステキストが入ります。</li>
@@ -133,7 +134,6 @@
         </div>
       </div>
 
-    </div>
     <!-- #news_area -->
 
     <div id="googlemap_area">
